--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "dependencies": {
     "connect": "1.8.5",
     "express": "2.5.2",
-    "jade": "0.20.0",
     "mongoose": "2.4.8",
     "socket.io": "0.8.7",
-    "hbs": "2.6.0"
+    "hbs": "2.6.0",
+    "blockchain-wallet": "0.0.3",
+    "node-uuid": "1.4.1",
+    "promised-io": "0.3.4"
   },
   "devDependencies": {
     "vows": "0.5.x",
