--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Bitcoin Kamikaze",
+  "name": "bitcoin kamikaze",
   "description": "Bitcoin Kamikaze",
   "author": "Nuno Hora <nunohora@gmail.com>",
   "version": "0.0.1",
